# hcbravo

./: .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE.md  README.md
.github/workflows/: build.yml  merge.yml  package.yml  release.yml
conf/: c172.yaml
confs/: c172.yaml
ext/AeroSoft/joystick configs/: HoneycombBravoThrottle_Linux.joy  HoneycombBravoThrottle_Mac.joy  HoneycombBravoThrottle_Win.joy
resources/conf/: c172.yaml
resources/joystick configs/: HoneycombBravoThrottle_Linux.joy
src/: knob.cpp  knob.h  led.cpp  led.h  logger.h  main.cpp  profile-data-ref-impl.h  profile.cpp  profile.h  state.cpp  state.h
tests/: CMakeLists.txt  profile-test.cpp
tests/XPSDK/XPLM/: XPLMDataAccess.h  XPLMUtilities.h
